Add support for custom favicon

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,6 +11,8 @@
 
 	<title>{{ pageTitle }}</title>
 
+	<link rel="icon" type="image/png" sizes="96x96" href="/favicon.png">
+
 	<meta name="title" content="{{ pageTitle }}">
 	<meta name="description" content="{{ pageDescription }}">
 
